新增java docker判题接口，修复判题结果返回。